Correction du key + refonte responsive en CSS Grid : déplacement du key depuis <article> vers <Link> pour respecter les bonnes pratiques React, suppression du key mal placé et correction du warning potentiel dans la console, passage de la Gallery de flex-wrap à CSS Grid pour une meilleure adaptation des cards, ajout de grid-template-columns avec auto-fit et minmax pour un rendu fluide sur toutes tailles d’écran. Ajustement du gap, du padding et du background en responsive. Mise à jour du ratio des cards (aspect-ratio 1/1 → 4/3 en mobile).

--- a/projet-kasa/src/components/Gallery/Gallery.module.scss
+++ b/projet-kasa/src/components/Gallery/Gallery.module.scss
@@ -1,25 +1,26 @@
 .containGallery {
     border-radius: 25px;
     background-color: #F6F6F6;
-    width: 100%;
-    max-width: 1240px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(335px, 1fr));
     gap: 50px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 50px 50px;
+    @media (max-width : 768px) {
+        background-color: white;
+        padding: 0;
+        gap: 22px;
+    }
 
     .cardLogement {
         position: relative;
-        display: flex;
-        flex-direction: column;
         z-index: 1;
-        height: 340px;
-        max-width: 340px;
         overflow: hidden;
         cursor: pointer;
         border-radius: 25px;
+        aspect-ratio: 1 / 1;
+        @media (max-width : 768px) {
+            aspect-ratio: 4 / 3;
+        }
         
         &::after {
             content: "";
@@ -33,7 +34,6 @@
             z-index: 0;
             width: 100%;
             height: 100%;
-            border-radius: 10px;
             object-fit: cover;
         }
 
